--- a/trunk/sns4j/web/src/main/resources/jdbc.properties
+++ b/trunk/sns4j/web/src/main/resources/jdbc.properties
@@ -1,12 +1,12 @@
-jdbc.driverClassName=${jdbc.driverClassName}
-jdbc.url=${jdbc.url}
-jdbc.username=${jdbc.username}
-jdbc.password=${jdbc.password}
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost/sns4j?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=mysql
 
-hibernate.dialect=${hibernate.dialect}
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Needed by Hibernate3 Maven Plugin defined in pom.xml
-hibernate.connection.username=${jdbc.username}
-hibernate.connection.password=${jdbc.password}
-hibernate.connection.url=${jdbc.url}
-hibernate.connection.driver_class=${jdbc.driverClassName}
+hibernate.connection.username=root
+hibernate.connection.password=mysql
+hibernate.connection.url=jdbc:mysql://localhost/sns4j?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+hibernate.connection.driver_class=com.mysql.jdbc.Driver
