修改系统中的一些BUG

--- a/sns4j/web/pom.xml
+++ b/sns4j/web/pom.xml
@@ -172,6 +172,11 @@
 
     <!-- Dependencies calculated by AppFuse when running full-source plugin -->
     <dependencies>
+       <dependency>
+           <groupId>commons-collections</groupId>
+           <artifactId>commons-collections</artifactId>
+           <version>${commons.collections.version}</version>
+       </dependency> 
         <dependency>
             <groupId>${jdbc.groupId}</groupId>
             <artifactId>${jdbc.artifactId}</artifactId>
